# libfvde

./: .gitignore  AUTHORS  CLAUDE.md  appveyor.yml  build.ps1  configure.ac  libfvde.ini  setup.cfg.in  synctestdata.ps1  synctestdata.sh  tox.ini
.github/workflows/: build_ossfuzz.yml
documentation/: 99-filevault2.rules  fvdedmsetup.asciidoc  fvdedump-backup-format.asciidoc  libfvde.vim
dpkg/: copyright
fvdetools/: Makefile.am  byte_size_string.c  byte_size_string.h  check_handle.c  check_handle.h  dmsetup_handle.c  dmsetup_handle.h  dump_handle.c  dump_handle.h  fvdecheck.c  fvdecheck_extent.c  fvdecheck_extent.h  fvdedmsetup.c  fvdedump.c  fvdeinfo.c  fvdemount.c  fvdetools_getopt.c  fvdetools_getopt.h  fvdetools_i18n.h  fvdetools_input.c  fvdetools_input.h  fvdetools_libbfio.h  fvdetools_libcdata.h  fvdetools_libcerror.h  fvdetools_libclocale.h  fvdetools_libcnotify.h  fvdetools_libcpath.h  fvdetools_libcsplit.h  fvdetools_libfguid.h  fvdetools_libfvde.h  fvdetools_libuna.h  fvdetools_output.c  fvdetools_output.h  fvdetools_signal.c  fvdetools_signal.h  fvdetools_unused.h  fvdewipekey.c  info_handle.c  info_handle.h  keyring_handle.c  (+13 more)
include/: libfvde.h.in
include/libfvde/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfvde/: fvde_metadata.h  fvde_volume.h  libfvde.c  libfvde.rc.in  libfvde_bit_stream.c  libfvde_bit_stream.h  libfvde_checksum.c  libfvde_checksum.h  libfvde_codepage.h  libfvde_compression.c  libfvde_compression.h  libfvde_debug.c  libfvde_debug.h  libfvde_definitions.h.in  libfvde_deflate.c  libfvde_deflate.h  libfvde_encrypted_metadata.c  libfvde_encrypted_metadata.h  libfvde_encryption_context.c  libfvde_encryption_context.h  libfvde_encryption_context_plist.c  libfvde_encryption_context_plist.h  libfvde_error.c  libfvde_error.h  libfvde_extern.h  libfvde_huffman_tree.c  libfvde_huffman_tree.h  libfvde_io_handle.c  libfvde_io_handle.h  libfvde_keyring.c  libfvde_keyring.h  libfvde_libbfio.h  libfvde_libcaes.h  libfvde_libcdata.h  libfvde_libcerror.h  libfvde_libclocale.h  libfvde_libcnotify.h  libfvde_libcthreads.h  libfvde_libfcache.h  libfvde_libfdata.h  (+37 more)
m4/: common.m4  keyutils.m4
manuals/: fvdedmsetup.1  fvdeinfo.1  fvdemount.1  libfvde.3
ossfuzz/: ossfuzz_libfvde.h  volume_fuzzer.cc
pyfvde/: pyfvde.c  pyfvde.h  pyfvde_datetime.c  pyfvde_datetime.h  pyfvde_error.c  pyfvde_error.h  pyfvde_file_object_io_handle.c  pyfvde_file_object_io_handle.h  pyfvde_file_objects_io_pool.c  pyfvde_file_objects_io_pool.h  pyfvde_guid.c  pyfvde_guid.h  pyfvde_integer.c  pyfvde_integer.h  pyfvde_libbfio.h  pyfvde_libcerror.h  pyfvde_libclocale.h  pyfvde_libfguid.h  pyfvde_libfvde.h  pyfvde_logical_volume.c  pyfvde_logical_volume.h  pyfvde_logical_volumes.c  pyfvde_logical_volumes.h  pyfvde_physical_volume.c  pyfvde_physical_volume.h  pyfvde_physical_volumes.c  pyfvde_physical_volumes.h  pyfvde_python.h  pyfvde_unused.h  pyfvde_volume.c  pyfvde_volume.h  pyfvde_volume_group.c  pyfvde_volume_group.h
tests/: fvde_test_bit_stream.c  fvde_test_compression.c  fvde_test_deflate.c  fvde_test_encrypted_metadata.c  fvde_test_error.c  fvde_test_functions.c  fvde_test_functions.h  fvde_test_getopt.c  fvde_test_getopt.h  fvde_test_huffman_tree.c  fvde_test_io_handle.c  fvde_test_keyring.c  fvde_test_libbfio.h  fvde_test_libcdata.h  fvde_test_libcerror.h  fvde_test_libclocale.h  fvde_test_libcnotify.h  fvde_test_libfvde.h  fvde_test_libuna.h  fvde_test_logical_volume.c  fvde_test_logical_volume_descriptor.c  fvde_test_macros.h  fvde_test_memory.c  fvde_test_memory.h  fvde_test_metadata.c  fvde_test_metadata_block.c  fvde_test_notify.c  fvde_test_physical_volume.c  fvde_test_physical_volume_descriptor.c  fvde_test_sector_data.c  fvde_test_segment_descriptor.c  fvde_test_support.c  fvde_test_tools_output.c  fvde_test_tools_signal.c  fvde_test_unused.h  fvde_test_volume.c  fvde_test_volume_data_handle.c  fvde_test_volume_group.c  fvde_test_volume_header.c  pkgbuild.sh  (+5 more)
